# weather-cli

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md
src/: api_usage.rs  cli.rs  cmd_line.rs  lib.rs  main.rs  program_info.rs  testing.rs  tests.rs  types.rs  user_setup.rs  weather.rs
src/api_usage/: response_types.rs
src/types/: response_types.rs  user_settings.rs
src/user_setup/: structs.rs
