[package]
name = "weather-cli"
description = "Minimalistic command-line weather program. It works with OpenWeather API."
keywords = ["weather", "open-weather-api"]
version = "0.3.6"
authors = ["Stellar"]
license = "MIT"
repository = "https://github.com/cosmostellar/weather-cli"
edition = "2021"
exclude = ["tests/**/*", "*_tests.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11.18"
regex = "1.8.4"
serde_json = "1.0.97"
anyhow = "1.0.71"
serde = { version = "1.0.188", features = ["derive"] }
chrono = "0.4.31"
num = "0.4.1"
