[package]
name = "weather-cli"
description = "Minimalistic command-line weather program. It works with OpenWeather API."
keywords = ["weather", "open-weather-api"]
version = "0.4.1"
authors = ["Pixella"]
license = "MIT"
repository = "https://github.com/pixelbracket/weather-cli"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.97"
reqwest = "0.11.18"
chrono = "0.4.31"
regex = "1.8.4"
